test/tests/errors/error-class-no-rec-proc3.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        private rec proc x() {

        }
    }
}